--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,6 @@ html,body {
   height: 100%;
 }
 
-p{
-    font-size: 9px;
-    text-align: justify;
-}
-
 table{
     width: 450px;
     position: relative;
@@ -19,6 +14,12 @@ body {
   padding-top: 40px;
   padding-bottom: 40px;
   background-image: url(/images/backgroud.jpg);
+}
+
+.font-footer{
+  font-size: 8px;
+  text-align: left;
+  text-decoration: #808080;
 }
 
 .form-signin {
